--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
-    "name": "FoodsApp",
-    "slug": "FoodsApp",
+    "name": "FoodssApp",
+    "slug": "FoodssApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "backgroundColor": "#24180f",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
